--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,17 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 URL: https://github.com/Jofou/jofou.lib
 BugReports: https://github.com/Jofou/jofou.lib/issues
+Imports: 
+    magrittr,
+    rlang (>= 0.1.2),
+    tibble,
+    dplyr,
+    ggplot2,
+    inspectdf,
+    kableExtra
+Suggests: 
+    tidyverse,
+    knitr,
+    rmarkdown,
+    roxygen2
+VignetteBuilder: knitr
