update readme and getting started

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,11 @@ export(as_name)
 export(enquo)
 export(enquos)
 export(expr)
+export(my_inspect_cat)
+export(my_inspect_cor)
+export(my_inspect_imb)
+export(my_inspect_na)
+export(my_inspect_num)
 export(my_inspect_types)
 export(sym)
 export(syms)
