add theme functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,9 @@ export(my_inspect_num)
 export(my_inspect_types)
 export(sym)
 export(syms)
+export(theme_avantgarde)
+export(theme_calibri)
+export(theme_serif)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
