--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,15 @@ export(my_inspect_imb)
 export(my_inspect_na)
 export(my_inspect_num)
 export(my_inspect_types)
+export(my_num_dist)
 export(sym)
 export(syms)
 export(theme_avantgarde)
 export(theme_calibri)
 export(theme_serif)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,is.ggplot)
+importFrom(grid,is.grob)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
