--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(as_name)
 export(enquo)
 export(enquos)
 export(expr)
+export(my_corr_num_graph)
 export(my_inspect_cat)
 export(my_inspect_cor)
 export(my_inspect_imb)
