--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(.data)
 export(as_label)
 export(as_name)
 export(calculate_mode)
+export(calibrate_and_plot)
 export(enquo)
 export(enquos)
 export(expr)
