--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,10 +29,11 @@ Imports:
     lubridate, 
     parsnip, 
     timetk,
-    extrafont
+    extrafont,
+    xfun,
+    rmarkdown
 Suggests: 
     tidyverse,
     knitr,
-    rmarkdown,
     roxygen2
 VignetteBuilder: knitr
