--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(calibrate_and_plot)
 export(enquo)
 export(enquos)
 export(expr)
-export(knit_with_date)
+export(knit_with_date_html)
 export(my_cat_dist)
 export(my_corr_num_graph)
 export(my_inspect_cat)
