add rle_fx and render_with_job

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     timetk,
     extrafont,
     xfun,
-    rmarkdown
+    rmarkdown,
+    rstudioapi
 Suggests: 
     tidyverse,
     knitr,
