--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(my_inspect_na)
 export(my_inspect_num)
 export(my_inspect_types)
 export(my_num_dist)
+export(render_with_job)
+export(rle_fx)
 export(sym)
 export(syms)
 export(theme_avantgarde)
